fixed error when trying to add subscription to already subbed author

--- a/example.env
+++ b/example.env
@@ -8,6 +8,13 @@ CHANNEL_ID=<your-id-here>
 DB_URI=sqlite:///substack.db
 
 # Oldest found posts allowed to be added to the DB (days).
-OLDEST_POST_DELTA = 7
+OLDEST_POST_DELTA=7
+
+# How often to look for new posts (minutes).
+POST_REFRESH_INTERVAL=15
+
+# How often to post unposted articles (minutes).
+POST_REFRESH_INTERVAL=15
+
 
 
