refactored bot and added banlist / list commands

--- a/example.env
+++ b/example.env
@@ -11,10 +11,11 @@ DB_URI=sqlite:///substack.db
 OLDEST_POST_DELTA=7
 
 # How often to look for new posts (minutes).
-POST_REFRESH_INTERVAL=15
+REFRESH_INTERVAL=15
 
 # How often to post unposted articles (minutes).
-POST_REFRESH_INTERVAL=15
+POST_INTERVAL=15
 
-
-
+# Owner of bot can kill the process by using the !exit command,
+# and also ban/unban users from managing subscriptions.
+BOT_OWNER=<your-discord-username>
